ADD_SUBDIRECTORY(logger-gtkwidget)
ADD_SUBDIRECTORY(gtk-splashscreen)
ADD_SUBDIRECTORY(gtk-error-dialog)
ADD_SUBDIRECTORY(gtk-objectmanipulator)

ADD_SUBDIRECTORY(gtkwidget-io)
ADD_SUBDIRECTORY(gtkwidget-standard)
ADD_SUBDIRECTORY(gtkwidget-playercontrol)
ADD_SUBDIRECTORY(terrain-heightmap)
ADD_SUBDIRECTORY(gtkwidget-analogdisplay)

IF(GTK_VERSION_GTK2)
  ADD_SUBDIRECTORY(gtkwidget-simgraph)
ENDIF(GTK_VERSION_GTK2)

IF(SARTURIS_PYTHON)
  ADD_SUBDIRECTORY(python-gtkwidget)
ENDIF(SARTURIS_PYTHON)

IF(WIN32)
  ADD_SUBDIRECTORY(tray-notifier)
ELSE(WIN32)
  FIND_PACKAGE(PkgConfig)
  PKG_CHECK_MODULES(NOTIFY libnotify)
  IF(NOTIFY_FOUND)
    ADD_SUBDIRECTORY(tray-notifier)
  ENDIF(NOTIFY_FOUND)
ENDIF(WIN32)
